fix: wrap hover events in @media query to fix touch event styling

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -155,10 +155,3 @@ a {
     margin-top: 1rem;
   }
 }
-
-// Disable hover styles on touch
-@media (hover: none) {
-  *:hover {
-    color: inherit !important;
-  }
-}
